package net.proselyte.basepatterns.behavioral.strategy;

class Coding {
}
