package net.proselyte.basepatterns.behavioral.strategy;

public class Sleeping {
}
